[tool.poetry]
authors = ["Andreas Andersen <bok.chan@gmail.com>"]
description = ""
name = "github-playground"
readme = "README.md"
version = "0.3.2"

[tool.poetry.dependencies]
python = "^3.11"
contextflow_integration = { git = "https://github.com/glooko/contextflow-backend.git", tag = "contextflow-integration+0.1.0", subdirectory = "contextflow_integration" }

# Add the contextflow_integration subdirectory as a dependency
[tool.poetry.group.dev.dependencies]
poethepoet = "^0.25.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "0.1.0"
[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]


[tool.poe.tasks.merge-release-pr]
shell = '''
    gh pr merge $pr_number --merge --delete-branch --auto

'''
args = [
    { "name" = "pr_number", "required" = true, "positional" = true, "help" = "PR number to merge" },
]
